[package]
name = "anthropic-sdk"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
dotenv = "0.15.0"
futures = "0.3"
mockall = "0.13.1"
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }

[features]
default = ["anthropic", "gemini"]
anthropic = []
gemini = []